@@ -1,6 +1,8 @@
 
 Changes in JMurmel-1.4.4 relative to JMurmel-1.4.3
 
+ * changed *command-line-argument-list* in compiled Murmel to a regular mutable list
+
  * fixed read-from-string: handle feature-expressions correctly, intern symbols correctly
  * fixed compiled random-state-p and make-random-state
 
